--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,13 +3,13 @@
 # Data paths
 data:
   out_dir: "/workdir2/cn24/program/CT_SU/logs"
-  exp_name: "exp_17"
+  exp_name: "exp_18"
 #  split_json: "metadata/Abdominal_Infrarenal.json"
 #  split_json: "metadata/Abdominal_Suprarenal.json"
 #  split_json: "metadata/Ascending_Arch.json"
 #  split_json: "metadata/Descending_Thoracic.json"
-  split_json: "metadata/DIS.json"
-#  split_json: "metadata/DIS_Abdominal_Infrarenal.json"
+#  split_json: "metadata/DIS.json"
+  split_json: "metadata/DIS_Abdominal_Infrarenal.json"
 #  split_json: "metadata/DIS_Abdominal_Suprarenal.json"
 #  split_json: "metadata/DIS_Ascending_Arch.json"
 #  split_json: "metadata/DIS_Descending_Thoracic.json"
@@ -21,6 +21,7 @@ data:
 model:
   architecture: "BasicUNet"
 #  architecture: "SegMamba"
+#  architecture: "EchoMamba"
   spatial_dims: 3
   in_channels: 2 # 拼接了all_lab输入, 所以输入通道数是2
   out_channels: 2
